NetBSD Problem Report #50747

From www@NetBSD.org  Tue Feb  2 10:32:47 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 37D187A0EB
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  2 Feb 2016 10:32:47 +0000 (UTC)
Message-Id: <20160202103246.5732C7AC9C@mollari.NetBSD.org>
Date: Tue,  2 Feb 2016 10:32:46 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/bin/ksh/vi.c: 4 * off by one error ?
X-Send-Pr-Version: www-1.0

>Number:         50747
>Category:       bin
>Synopsis:       src/bin/ksh/vi.c: 4 * off by one error ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 02 10:35:00 +0000 2016
>Closed-Date:    Wed Feb 03 08:21:33 +0000 2016
>Last-Modified:  Wed Feb 03 08:21:33 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160131
>Organization:
>Environment:
>Description:

1.

Source code is


            while (!is_wordch(es->cbuf[ncursor]) &&
                    !isspace((unsigned char)es->cbuf[ncursor]) &&
                    ncursor < es->linelen)

2.

[src/bin/ksh/vi.c:1583]: (style) Array index 'ncursor' is used before limits check.

3.

[src/bin/ksh/vi.c:1650]: (style) Array index 'ncursor' is used before limits check.

Source code is

        while (!isspace((unsigned char)es->cbuf[ncursor]) && ncursor < es->linelen)
            ncursor++;

4.

[src/bin/ksh/vi.c:1652]: (style) Array index 'ncursor' is used before limits check.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50747 CVS commit: src/bin/ksh
Date: Wed, 3 Feb 2016 00:26:16 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Feb  3 05:26:16 UTC 2016

 Modified Files:
 	src/bin/ksh: vi.c

 Log Message:
 PR/50747: David Binderman: check bounds before dereference.
 While here add some continues before semicolons.


 To generate a diff of this commit:
 cvs rdiff -u -r1.12 -r1.13 src/bin/ksh/vi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 03 Feb 2016 08:21:33 +0000
State-Changed-Why:
Fixed by christos, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.