PR/50747: David Binderman: check bounds before dereference. While here add some continues before semicolons.